# server-father-bot

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
.github/workflows/: docker-publish.yml
src/: commands.rs  config.rs  error.rs  main.rs
src/bot/: mod.rs
src/commands/: mod.rs
src/db/: mod.rs
src/db/entities/: mod.rs  prelude.rs  server.rs  server_group.rs
src/db/migrations/: m20240301_000001_create_server_groups.rs  m20240301_000002_create_servers.rs  mod.rs
src/monitor/: mod.rs  tasks.rs
src/services/: group.rs  mod.rs  server.rs
